--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -18,9 +18,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Simplifying Dumpyness"
-        android:textSize="35dp"
-        android:fontFamily="cursive"
+        android:textSize="30dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_centerInParent="true"
         android:id="@+id/introduction"
         android:layout_below="@+id/splash_logo"
         android:layout_centerHorizontal="true"
