--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,4 +6,13 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+    <style name="Button">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:minWidth">140dp</item>
+        <item name="android:minHeight">45dp</item>
+        <item name="android:layout_margin">3dp</item>
+        <item name="android:elevation">25dp</item>
+        <item name="android:background">@drawable/primary_round</item>
+    </style>
 </resources>
