--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,31 +17,103 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="SELECT THE CALCULATOR"
+        android:text="FIELD BOOK"
         android:id="@+id/calculator_select"
-        android:layout_alignParentTop="true"
         android:fontFamily="serif-monospace"
         android:textStyle="bold"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:singleLine="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="11dp"
+        android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/datePicker">
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="SIMPLE"
+            android:id="@+id/simple_calc"
+            android:layout_alignParentLeft="true" />
 
-    <Button
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="CHAINAGE"
+            android:id="@+id/chainage_calc"
+            android:layout_alignParentRight="true" />
+    </LinearLayout>
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SIMPLE"
-        android:id="@+id/simple_calc"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/calculator_select"
-        android:layout_alignStart="@+id/calculator_select" />
+        android:text="Name of Work:"
+        android:id="@+id/work_name_text"
+        android:layout_below="@+id/calculator_select"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        android:textSize="17dp"
+        android:fontFamily="monospace"/>
 
-    <Button
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CHAINAGE"
-        android:id="@+id/chainage_calc"
-        android:layout_alignTop="@+id/simple_calc"
-        android:layout_alignRight="@+id/calculator_select"
-        android:layout_alignEnd="@+id/calculator_select" />
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/work_name"
+        android:textAlignment="center"
+        android:nextFocusForward="@+id/surveyor_name"
+        android:layout_alignStart="@+id/surveyor_name"
+        android:layout_alignLeft="@+id/surveyor_name"
+        android:layout_alignBottom="@+id/work_name_text"
+        android:layout_toRightOf="@+id/work_name_text"
+        android:layout_toEndOf="@+id/work_name_text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name of Surveyor:"
+        android:id="@+id/textView"
+        android:layout_marginTop="26dp"
+        android:textSize="17dp"
+        android:fontFamily="monospace"
+        android:layout_below="@+id/work_name"
+        android:layout_alignLeft="@+id/work_name_text"
+        android:layout_alignStart="@+id/work_name_text" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:ems="10"
+        android:id="@+id/surveyor_name"
+        android:textAlignment="center"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date of Survey:"
+        android:id="@+id/textView3"
+        android:layout_marginTop="26dp"
+        android:textSize="17dp"
+        android:fontFamily="monospace"
+        android:layout_below="@+id/textView"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView" />
+
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/datePicker"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
