--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#cbad6d"
-        android:endColor="#d53369"
+        android:startColor="#EECDA3"
+        android:endColor="#EF629F"
         android:angle="45" />
 </shape>
